[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sam3d_objects"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    # --- PyTorch core (cu128 build from PyTorch wheel index; required for SM 12.0 / Blackwell) ---
    "torch==2.7.0+cu128",
    "torchvision==0.22.0+cu128",
    "torchaudio==2.7.0+cu128",
    "xformers",
    "lightning",                         # unpinned; 2.3.3 targeted torch 2.5
    "timm==0.9.16",
    "einops-exts==0.0.4",

    # --- nvcc (pip-installed; provides nvcc for source builds) ---
    "nvidia-cuda-nvcc-cu12",

    # --- Sparse 3D convolutions (cu124; forward-compat with CUDA 12.8) ---
    "spconv-cu124",

    # --- 3D geometry ---
    "open3d==0.18.0",
    "point-cloud-utils==0.29.5",
    "pymeshfix==0.17.0",
    "xatlas==0.0.9",
    "pyrender==0.1.45",
    "polyscope==2.3.0",
    "igraph==0.11.8",
    "imath==0.0.2",
    "Rtree==1.3.0",
    "bpy==4.3.0",
    "panda3d-gltf==1.2.1",

    # --- Depth estimation (MoGe) ---
    "MoGe @ git+https://github.com/microsoft/MoGe.git@a8c37341bc0325ca99b9d57981cc3bb2bd3e255b",

    # --- Config ---
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "easydict==1.13",

    # --- ML utilities ---
    "sentence-transformers==2.6.1",
    "roma==1.5.1",
    "smplx==0.1.28",
    "peft==0.10.0",
    "optimum==1.18.1",
    "bitsandbytes",                      # unpinned; 0.43.0 targets cu121
    "auto_gptq",                         # unpinned; older pin may not build on torch 2.7
    "fvcore==0.1.5.post20221221",
    "optree==0.14.1",

    # --- Data / IO ---
    "h5py==3.12.1",
    "decord==0.6.0",
    "av==12.0.0",
    "opencv-python==4.9.0.80",
    "OpenEXR==3.3.3",
    "scikit-image==0.23.1",
    "pycocotools==2.0.7",
    "jsonlines==4.0.0",
    "jsonpickle==3.0.4",
    "webdataset==0.2.86",
    "mosaicml-streaming==0.7.5",
    "gdown==5.2.0",
    "fastavro==1.9.4",
    "librosa==0.10.1",

    # --- Logging / experiment tracking ---
    "wandb==0.20.0",
    "tensorboard==2.16.2",
    "loguru==0.7.2",

    # --- Utilities ---
    "ftfy==6.2.0",
    "colorama==0.4.6",
    "rootutils==1.0.7",
    "randomname==0.2.1",
    "simplejson==3.19.2",
    "orjson==3.10.0",
    "deprecation==2.1.0",
    "astor==0.8.1",
    "async-timeout==4.0.3",
    "exceptiongroup==1.2.0",
    "fasteners==0.19",
    "tomli==2.0.1",
    "crcmod==1.7",
    "objsize==0.7.0",
    "python-pycg==0.9.2",
    "PySocks==1.7.1",
    "pip-system-certs==4.0",

    # --- Web / API / streaming ---
    "Flask==3.0.3",
    "Werkzeug==3.0.6",
    "httplib2==0.22.0",
    "hdfs==2.7.3",
    "pymongo==4.6.3",
    "sagemaker==2.242.0",

    # --- Jupyter ---
    "jupyter==1.1.1",

    # --- Code quality ---
    "black==24.3.0",
    "autoflake==2.3.1",
    "flake8==7.0.0",
    "usort==1.0.8.post1",
    "pdoc3==0.10.0",
    "pytest==8.1.1",

    # --- JSON / URI schema ---
    "uri-template==1.3.0",
    "fqdn==1.5.1",
    "isoduration==20.11.0",
    "jsonpointer==2.4",
    "webcolors==1.13",
    "pydot==1.4.2",
]

[project.optional-dependencies]
# pytorch3d must be installed AFTER torch (compile from source; ~10 min)
p3d = [
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@75ebeeaea0908c5527e7b1e305fbc7681382db47",
    "flash_attn>=2.8.3",
]
inference = [
    "kaolin @ git+https://github.com/NVIDIAGameWorks/kaolin.git",
    "gsplat @ git+https://github.com/nerfstudio-project/gsplat.git",
    "seaborn==0.13.2",
    "gradio==5.49.0",
]
dev = [
    "findpydeps",
    "pipdeptree",
    "lovely_tensors",
]

[tool.hatch.build]
ignore-vcs = true
include = ["**/*.py"]
exclude = ["conftest.py", "*_test.py"]
packages = ["sam3d_objects"]

[tool.hatch.metadata]
allow-direct-references = true

# PyTorch's own wheel index — required for cu128 (SM 12.0 / Blackwell RTX 5090 support).
# This is PyTorch/Meta's server, not NVIDIA's NGC.
[tool.uv]
extra-index-url = [
    "https://download.pytorch.org/whl/cu128",
]
